# graal-old

./: .clang-format  CMakeLists.txt  CMakeSettings.json  NOTES.md  README.md  ideas.cpp  ideas.txt  sample.cpp
cmake/: ExternalDependencies.cmake
data/shaders/: frame_uniforms.desc.glsl
include/graal/: access_mode.hpp  accessor.hpp  allow_flags.hpp  bitmask.hpp  buffer.hpp  buffer_usage.hpp  data_type.hpp  debug_output.hpp  device.hpp  errors.hpp  event.hpp  flags.hpp  flags_iterator.hpp  flagsfwd.hpp  gl_format_info.hpp  glad.h  graphics_pipeline.hpp  image.hpp  image_format.hpp  image_type.hpp  image_usage.hpp  instance.hpp  program.hpp  queue.hpp  queue_class.hpp  range.hpp  raw_buffer.hpp  render_pass.hpp  sampler.hpp  shader.hpp  swapchain.hpp  target.hpp  texture.hpp  vertex_array.hpp  visibility.hpp
include/graal/detail/: batch.hpp  command_buffer_pool.hpp  dependent_false.hpp  gl_handle.hpp  image_desc.hpp  image_resource.hpp  named_object.hpp  pipeline_stage_tracker.hpp  plf_colony.h  recycler.hpp  resource.hpp  sequence_number.hpp  staging_pool.hpp  swapchain_impl.hpp  task.hpp  virtual_resource.hpp  vk_handle.hpp  vk_image.hpp
include/graal/ext/: geometry.hpp  scene.hpp  vertex_array_cache.hpp  vertex_traits.hpp
include/graal/gl/: buffer.hpp  debug_output.hpp  format_info.hpp  glad.h  handle.hpp  texture.hpp  types.hpp
src/: buffer.cpp  debug_output.cpp  device.cpp  framebuffer.cpp  gl_format_info.cpp  glad.c  image.cpp  image_format.cpp  instance.cpp  program.cpp  queue.cpp  raw_buffer.cpp  shader.cpp  swapchain.cpp  texture.cpp  vertex_array.cpp
src/detail/: batch.cpp  image_resource.cpp  resource.cpp  staging_pool.cpp  swapchain_impl.cpp  task.cpp  virtual_resource.cpp
src/ext/: scene.cpp
src/gl/: buffer.cpp  debug_output.cpp  format_info.cpp  framebuffer.cpp  glad.c  texture.cpp
tests/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  load_image.cpp  load_image.hpp  main.cpp
tools/shadergen/: CMakeLists.txt  main.cpp
